# bang-sdl

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cmake/: git_cards_version.c.in  git_client_version.c.in
.github/workflows/: cmake.yml
docs/: README.md
resources/: CMakeLists.txt  EmbedResource.cmake  bang_cards.json  compile_locale.cpp  game_options.json  locale_en.txt  locale_it.txt  pack.cpp  pack.py
resources/cards/: bang_cards.json
resources/icons/: bang.rc
src/: CMakeLists.txt  chat_ui.cpp  chat_ui.h  config.cpp  config.h  entrypoint.cpp  image_serial.cpp  image_serial.h  intl.cpp  intl.h  main.c  manager.cpp  manager.h  media_pak.cpp  media_pak.h  os_api.cpp  os_api.h  pack.cpp  sdl_wrap.h  sounds_pak.cpp  sounds_pak.h  user_info.cpp  wsconnection.cpp  wsconnection.h
src/client/: chat_ui.cpp  chat_ui.h  config.h  entrypoint.cpp  global_resources.cpp  global_resources.h  intl.cpp  intl.h  main.c  main.cpp  manager.cpp  manager.h  media_pak.cpp  media_pak.h  os_api.cpp  os_api.h  user_info.cpp  user_info.h
src/client/game/: animation.cpp  animation.h  animations.cpp  animations.h  card.cpp  card.h  game.cpp  game.h  game_message_box.h  game_ui.cpp  game_ui.h  options.h  player.cpp  player.h  target_finder.cpp  target_finder.h
src/client/locales/: cards_en.h  cards_it.h  locale_en.h  locale_it.h  locales.h
src/client/scenes/: connect.cpp  connect.h  loading.cpp  loading.h  lobby.cpp  lobby.h  lobby_list.cpp  lobby_list.h  make_lobby.cpp  make_lobby.h  scene_base.h
src/client/scenes/game/: animation.h  card.cpp  card.h  card_resources.cpp  card_resources.h  game.cpp  game.h  game_ui.cpp  game_ui.h  player.cpp  player.h  sizes.h  target_finder.cpp  target_finder.h
src/client/scenes/widgets/: button.cpp  button.h  chat_ui.cpp  chat_ui.h  checkbox.cpp  checkbox.h  (+8 more)
src/client/tinyfd/: tinyfiledialogs.c  tinyfiledialogs.h
src/client/widgets/: button.cpp  button.h  checkbox.cpp  checkbox.h  defaults.h  event_handler.h  os_api.cpp  os_api.h  profile_pic.cpp  profile_pic.h  stattext.h  textbox.cpp  textbox.h
src/common/: base64.h  binary_serial.h  card_effect.h  card_enums.h  characters.h  effect_holder.h  effects.h  enum_variant.h  enums.h  equips.h  format_str.h  game_action.h  game_update.h  holders.h  json_serial.h  message_header.h  net_enums.h  options.h  reflector.h  requests.h  resource.h  responses.h  scenarios.h  sdl.h  sdlnet.h  timer.h  type_list.h  unpacker.h  update_enums.h  utils.h
src/common/effects/: card_effect.h  characters.h  characters_armedanddangerous.h  characters_base.h  characters_dodgecity.h  characters_goldrush.h  characters_valleyofshadows.h  characters_wildwestshow.h  effects_armedanddangerous.h  effects_base.h  effects_canyondiablo.h  effects_goldrush.h  effects_valleyofshadows.h  equips_armedanddangerous.h  equips_base.h  equips_canyondiablo.h  equips_goldrush.h  equips_valleyofshadows.h  requests_armedanddangerous.h  requests_base.h  requests_canyondiablo.h  requests_valleyofshadows.h  scenarios.h  scenarios_fistfulofcards.h  scenarios_highnoon.h
src/game/: card.h  card_data.h  card_enums.h  draw_check_handler.cpp  draw_check_handler.h  events.cpp  events.h  format_str.h  formatter.h  game.cpp  game.h  game_action.h  game_net.h  game_table.cpp  game_table.h  game_update.h  holders.cpp  holders.h  make_all_cards.cpp  make_all_cards.h  os_api.cpp  os_api.h  play_verify.cpp  play_verify.h  player.cpp  player.h  possible_to_play.cpp  request_queue.h
src/game/effects/: card_effect.h  characters.h  characters_armedanddangerous.cpp  characters_armedanddangerous.h  characters_base.cpp  characters_base.h  characters_dodgecity.cpp  characters_dodgecity.h  characters_goldrush.cpp  characters_goldrush.h  characters_valleyofshadows.cpp  characters_valleyofshadows.h  characters_wildwestshow.cpp  characters_wildwestshow.h  effects.h  effects_armedanddangerous.cpp  effects_armedanddangerous.h  effects_base.cpp  effects_base.h  effects_canyondiablo.cpp  effects_canyondiablo.h  effects_goldrush.cpp  effects_goldrush.h  effects_valleyofshadows.cpp  effects_valleyofshadows.h  equips.h  equips_armedanddangerous.cpp  equips_armedanddangerous.h  equips_base.cpp  equips_base.h  equips_canyondiablo.cpp  equips_canyondiablo.h  equips_goldrush.cpp  equips_goldrush.h  equips_valleyofshadows.cpp  equips_valleyofshadows.h  requests.h  requests_armedanddangerous.cpp  requests_armedanddangerous.h  requests_base.cpp  (+10 more)
src/gamescene/: CMakeLists.txt  animation.h  animations.cpp  animations.h  card.cpp  card.h  card_serial.cpp  filters.cpp  game.cpp  game.h  game_message_box.cpp  game_message_box.h  game_styles.h  game_ui.cpp  game_ui.h  modifiers.cpp  modifiers.h  options.cpp  options.h  player.cpp  player.h  raii_editor.h  target_finder.cpp  target_finder.h
src/locales/: cards_en.h  cards_it.h  locale_en.h  locale_it.h  locales.h
src/scenes/: CMakeLists.txt  connect.cpp  connect.h  loading.cpp  loading.h  lobby.cpp  lobby.h  lobby_list.cpp  lobby_list.h  option_box.cpp  option_box.h  scene_base.h
src/server/: ansicvt.cpp  ansicvt.h  card.h  game.h  main.cpp  manager.cpp  manager.h  net_enums.h  net_options.h  player.cpp  player.h  read_cards.cpp  read_cards.h  server.cpp  server.h  test.cpp
src/server/effects/: card_effect.h  effects.cpp  effects.h
src/server/game/: card.cpp  card.h  characters.cpp  effect_holder.cpp  effects.cpp  equips.cpp  events.cpp  events.h  formatter.h  game.cpp  game.h  game2.cpp  holders.cpp  make_all_cards.cpp  make_effect.h  make_equip.cpp  player.cpp  player.h  possible_to_play.cpp  requests.cpp  responses.cpp  scenarios.cpp  timer.cpp
src/utils/: base64.h  binary_serial.h  connection.h  enum_error_code.h  enum_variant.h  enums.h  id_map.h  json_serial.h  message_header.h  reflector.h  resource.h  sdl.h  sdlnet.h  static_map.h  svstream.h  tsqueue.h  unpacker.h  utils.h
src/widgets/: CMakeLists.txt  button.cpp  button.h  checkbox.cpp  checkbox.h  color_tracker.h  defaults.h  event_handler.h  profile_pic.cpp  profile_pic.h  stattext.h  style_tracker.h  text_list.cpp  text_list.h  textbox.cpp  textbox.h
(+67 files in other folders)
